--- a/config/sites-available/000-default.conf
+++ b/config/sites-available/000-default.conf
@@ -29,9 +29,8 @@
 
 	<IfModule mod_rewrite.c>
 		RewriteEngine On
-		RewriteCond %{REQUEST_FILENAME} !-d
-		RewriteCond %{REQUEST_FILENAME} !-f
-		RewriteRule ^(.+)$ /index.php [QSA,L]
+		RewriteCond %{REQUEST_URI}  !(\.png|\.jpg|\.webp|\.gif|\.jpeg|\.zip|\.css|\.svg|\.js|\.pdf)$
+		RewriteRule ^(.*)$ /routes.php [QSA,L]
 	</IfModule>
 </VirtualHost>
 
