Opened MySQL port through docker-compose.yaml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
       MYSQL_ROOT_PASSWORD: root
     volumes:
       - ./db-data:/var/lib/mysql
-    #ports:
-    #  - "3306:3306"
+    ports:
+      - "3306:3306"
   db-admin:
     image: adminer:latest
     ports:
