Added create.sql and set it to automatically initialize datasase for the first time

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
     volumes:
-      - ./db-data:/var/lib/mysql
+      #- ./db-data:/var/lib/mysql
+      - ./SQL:/docker-entrypoint-initdb.d
     ports:
       - "3306:3306"
   db-admin:
