--- a/config/sites-available/000-default.conf
+++ b/config/sites-available/000-default.conf
@@ -27,6 +27,23 @@
 	# after it has been globally disabled with "a2disconf".
 	#Include conf-available/serve-cgi-bin.conf
 
+    CacheQuickHandler off
+    CacheLock on
+    CacheLockPath /tmp/mod_cache-lock
+    CacheLockMaxAge 5
+    CacheIgnoreHeaders Set-Cookie
+
+    <Location />
+        CacheEnable disk
+        CacheHeader on
+        CacheDefaultExpire 800
+        CacheMaxExpire 64000
+        CacheIgnoreNoLastMod On
+        ExpiresActive on
+        ExpiresDefault A300
+    </Location>
+
+
 	<IfModule mod_rewrite.c>
 		RewriteEngine On
 		RewriteCond %{REQUEST_URI}  !(\.png|\.jpg|\.webp|\.gif|\.jpeg|\.zip|\.css|\.svg|\.js|\.pdf)$
